# processor

./: .env-template  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
.nova/: Artwork  Configuration.json
app/: __init__.py  main.py
app/database/: __init__.py
app/database/clickhouse/: __init__.py  connect.py  process_tests.py
app/database/postgres/: __init__.py  connect.py  fetch_unprocessed.py  join_operations.py  process_tests.py  run_query.py
app/database/postgres/queries/: clothe_domains.sql  get_naked_domains.sql  get_rule_data.sql  get_unprocessed_rules.sql  upsert_url.sql
app/processes/: __init__.py  axe.py  naked_urls.py  preprocess_tests.py
app/utils/: __init__.py
app/utils/logger/: __init__.py  logger.py
app/utils/monitoring/: __init__.py  logging.py  pyroscope.py  sentry.py
tests/: test_logger.py
